[gd_scene load_steps=35 format=3 uid="uid://d04e322sysodu"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_6c7yl"]
[ext_resource type="Script" path="res://scenes/FiniteStateMachine.gd" id="2_78mvl"]
[ext_resource type="Resource" uid="uid://btd57jxci3dpf" path="res://inventory/player_inventory.tres" id="2_ows2h"]
[ext_resource type="Script" path="res://components/HealthComponent.gd" id="3_kk08w"]
[ext_resource type="Script" path="res://inventory/inventory_data_equip.gd" id="3_rk60w"]
[ext_resource type="Script" path="res://player/PlayerIdle.gd" id="4_dqgiv"]
[ext_resource type="Script" path="res://player/PlayerDeath.gd" id="5_wmefp"]
[ext_resource type="Texture2D" uid="uid://8c50pxmumybx" path="res://addons/v1.1 dungeon crawler 16X16 pixel pack/heroes/knight/knight_idle_spritesheet.png" id="6_af5i2"]
[ext_resource type="Texture2D" uid="uid://bvvoeln3lwb27" path="res://addons/v1.1 dungeon crawler 16X16 pixel pack/heroes/knight/knight_run_spritesheet.png" id="7_vopu1"]
[ext_resource type="PackedScene" uid="uid://dqds6a6i1y724" path="res://components/HurtboxComponent.tscn" id="11_u6o8k"]
[ext_resource type="PackedScene" uid="uid://dafkaldphgk2r" path="res://inventory/inventory.tscn" id="13_4uoaa"]
[ext_resource type="Script" path="res://player/inventory_interface.gd" id="14_kty28"]
[ext_resource type="PackedScene" uid="uid://c5aewq4icuvyd" path="res://inventory/inventory_slot.tscn" id="16_mxe8c"]
[ext_resource type="PackedScene" uid="uid://dyk0pirm4tbku" path="res://inventory/hot_bar_inventory.tscn" id="17_tjxhh"]

[sub_resource type="Resource" id="Resource_8xyws"]
script = ExtResource("3_rk60w")
slot_datas = Array[Resource("res://inventory/slot_data.gd")]([null, null])

[sub_resource type="CircleShape2D" id="CircleShape2D_2nr10"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6od2t"]
atlas = ExtResource("6_af5i2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcen5"]
atlas = ExtResource("6_af5i2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y6mc"]
atlas = ExtResource("6_af5i2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_216rf"]
atlas = ExtResource("6_af5i2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_frtqy"]
atlas = ExtResource("6_af5i2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1na1v"]
atlas = ExtResource("6_af5i2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6q6g"]
atlas = ExtResource("7_vopu1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnuf6"]
atlas = ExtResource("7_vopu1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5g6s"]
atlas = ExtResource("7_vopu1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n750k"]
atlas = ExtResource("7_vopu1")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwymf"]
atlas = ExtResource("7_vopu1")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2bt6"]
atlas = ExtResource("7_vopu1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ob0b8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6od2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcen5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y6mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_216rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frtqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1na1v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6q6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnuf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5g6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n750k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwymf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2bt6")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vgwgg"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_arnqh"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfyfe"]
_data = {
"idle": SubResource("Animation_vgwgg"),
"move": SubResource("Animation_arnqh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xe7ld"]
size = Vector2(9, 14)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rc1pt"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:scale")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("AnimationPlayer:current_animation")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="2dPlayer" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
collision_mask = 7
script = ExtResource("1_6c7yl")
inventory_data = ExtResource("2_ows2h")
equip_inventory_data = SubResource("Resource_8xyws")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(0.72, 0.72)
shape = SubResource("CircleShape2D_2nr10")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("2_78mvl")
initialState = NodePath("PlayerIdle")

[node name="HealthComponent" type="Node2D" parent="StateMachine"]
script = ExtResource("3_kk08w")
maxHealth = 6.0

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_dqgiv")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("5_wmefp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ob0b8")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kfyfe")
}

[node name="Hand1" type="Node2D" parent="."]

[node name="Hand2" type="Node2D" parent="."]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("11_u6o8k")]
collision_layer = 2
collision_mask = 6
monitorable = true
healthComponent = NodePath("../StateMachine/HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_xe7ld")
debug_color = Color(0, 0.65098, 0.0509804, 0.419608)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rc1pt")

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="Inventory Interface" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_kty28")

[node name="EquipInventory" parent="PlayerUI/Inventory Interface" instance=ExtResource("13_4uoaa")]
layout_mode = 0
offset_left = 182.0
offset_top = 10.0
offset_right = 222.0
offset_bottom = 50.0

[node name="PlayerInventory" parent="PlayerUI/Inventory Interface" instance=ExtResource("13_4uoaa")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="GrabbedSlot" parent="PlayerUI/Inventory Interface" instance=ExtResource("16_mxe8c")]
visible = false
modulate = Color(1, 1, 1, 0.490196)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0

[node name="HotBarInventory" parent="PlayerUI" instance=ExtResource("17_tjxhh")]
offset_left = 10.0
offset_top = 10.0
offset_right = 166.0
offset_bottom = 58.0

[node name="DropPosition" type="Marker2D" parent="."]
position = Vector2(0, -18)

[connection signal="drop_slot_data" from="PlayerUI/Inventory Interface" to="PlayerUI/Inventory Interface" method="_on_drop_slot_data"]
[connection signal="gui_input" from="PlayerUI/Inventory Interface" to="PlayerUI/Inventory Interface" method="_on_gui_input"]
[connection signal="visibility_changed" from="PlayerUI/Inventory Interface" to="PlayerUI/Inventory Interface" method="_on_visibility_changed"]
